lcfuml/src/myCompilerPackage/UmlParser.java
// $ANTLR 3.5.1 C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g 2024-10-08 17:45:38

	package myCompilerPackage; 		


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class UmlParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AADD", "ABSTRACT", "ADD", "ATTRIBUTE", 
		"BOOLEAN_TYPE", "BYTE", "CHAR", "CHAR_TYPE", "CLASS", "COMMA", "COMMENT", 
		"COMP", "COMPOSED", "CONST", "DIV", "DOT", "DOUBLE_TYPE", "DP", "DXREL", 
		"ENUM", "EQ", "ERROR_TOKEN", "ESC_SEQ", "EXPONENT", "EXTENDS", "FALSE", 
		"FINAL", "FLOAT", "FLOAT_TYPE", "GTE", "HEX_DIGIT", "ID", "IMPLEMENTS", 
		"INHERITS", "INT", "INTERFACE", "INT_TYPE", "LB", "LBR", "LIST", "LONG_TYPE", 
		"LP", "LTE", "MAX", "MIN", "MOD", "MUL", "MULTISET", "NEQ", "NONUNIQUE", 
		"NULL", "OCTAL_ESC", "OPERATION", "ORDER", "ORDEREDSET", "PACKAGE", "PRIVATE", 
		"PROTECTED", "PUBLIC", "RB", "RBR", "READONLY", "RELATIONS", "RP", "SC", 
		"SET", "SHARED", "SHORT", "SSUB", "STATIC", "STRING", "STRING_TYPE", "SXREL", 
		"THROWS", "TRUE", "UNDREL", "UNICODE_ESC", "UNIQUE", "UNORDERED", "VOID", 
		"WS"
	};
	public static final int EOF=-1;
	public static final int AADD=4;
	public static final int ABSTRACT=5;
	public static final int ADD=6;
	public static final int ATTRIBUTE=7;
	public static final int BOOLEAN_TYPE=8;
	public static final int BYTE=9;
	public static final int CHAR=10;
	public static final int CHAR_TYPE=11;
	public static final int CLASS=12;
	public static final int COMMA=13;
	public static final int COMMENT=14;
	public static final int COMP=15;
	public static final int COMPOSED=16;
	public static final int CONST=17;
	public static final int DIV=18;
	public static final int DOT=19;
	public static final int DOUBLE_TYPE=20;
	public static final int DP=21;
	public static final int DXREL=22;
	public static final int ENUM=23;
	public static final int EQ=24;
	public static final int ERROR_TOKEN=25;
	public static final int ESC_SEQ=26;
	public static final int EXPONENT=27;
	public static final int EXTENDS=28;
	public static final int FALSE=29;
	public static final int FINAL=30;
	public static final int FLOAT=31;
	public static final int FLOAT_TYPE=32;
	public static final int GTE=33;
	public static final int HEX_DIGIT=34;
	public static final int ID=35;
	public static final int IMPLEMENTS=36;
	public static final int INHERITS=37;
	public static final int INT=38;
	public static final int INTERFACE=39;
	public static final int INT_TYPE=40;
	public static final int LB=41;
	public static final int LBR=42;
	public static final int LIST=43;
	public static final int LONG_TYPE=44;
	public static final int LP=45;
	public static final int LTE=46;
	public static final int MAX=47;
	public static final int MIN=48;
	public static final int MOD=49;
	public static final int MUL=50;
	public static final int MULTISET=51;
	public static final int NEQ=52;
	public static final int NONUNIQUE=53;
	public static final int NULL=54;
	public static final int OCTAL_ESC=55;
	public static final int OPERATION=56;
	public static final int ORDER=57;
	public static final int ORDEREDSET=58;
	public static final int PACKAGE=59;
	public static final int PRIVATE=60;
	public static final int PROTECTED=61;
	public static final int PUBLIC=62;
	public static final int RB=63;
	public static final int RBR=64;
	public static final int READONLY=65;
	public static final int RELATIONS=66;
	public static final int RP=67;
	public static final int SC=68;
	public static final int SET=69;
	public static final int SHARED=70;
	public static final int SHORT=71;
	public static final int SSUB=72;
	public static final int STATIC=73;
	public static final int STRING=74;
	public static final int STRING_TYPE=75;
	public static final int SXREL=76;
	public static final int THROWS=77;
	public static final int TRUE=78;
	public static final int UNDREL=79;
	public static final int UNICODE_ESC=80;
	public static final int UNIQUE=81;
	public static final int UNORDERED=82;
	public static final int VOID=83;
	public static final int WS=84;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public UmlParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public UmlParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return UmlParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g"; }


		SemanticHandler h = new SemanticHandler ();

		public SemanticHandler getHandler () {
			return h;
		}


	  public void displayRecognitionError(String[] tokenNames,
	                                       RecognitionException e) {
			// in tokenNames c'è la lista dei token che si sarebbe voluto trovare
			// token che genera l'errore
			Token tk = input.LT(1);
	    // header e corpo dell'errore gestito automaticamente da ANTLR
			String hdr = getErrorHeader(e);
			String msg = getErrorMessage(e, tokenNames);
			
			// passo tutto all'handler che lo 
			h.handleError(tokenNames, tk, e, hdr, msg);
	  }




	// $ANTLR start "start"
	// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:43:1: start : ( classDefinitionRule )* ( relationsDefinitionRule )? ;
	public final void start() throws RecognitionException {
		try {
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:44:2: ( ( classDefinitionRule )* ( relationsDefinitionRule )? )
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:45:3: ( classDefinitionRule )* ( relationsDefinitionRule )?
			{
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:45:3: ( classDefinitionRule )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ABSTRACT||LA1_0==CLASS) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:45:3: classDefinitionRule
					{
					pushFollow(FOLLOW_classDefinitionRule_in_start60);
					classDefinitionRule();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:46:3: ( relationsDefinitionRule )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==RELATIONS) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:46:3: relationsDefinitionRule
					{
					pushFollow(FOLLOW_relationsDefinitionRule_in_start65);
					relationsDefinitionRule();
					state._fsp--;

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "start"



	// $ANTLR start "classDefinitionRule"
	// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:50:1: classDefinitionRule : (a= ABSTRACT )? CLASS c= ID classCodeRule ;
	public final void classDefinitionRule() throws RecognitionException {
		Token a=null;
		Token c=null;

		try {
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:51:2: ( (a= ABSTRACT )? CLASS c= ID classCodeRule )
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:52:3: (a= ABSTRACT )? CLASS c= ID classCodeRule
			{
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:52:4: (a= ABSTRACT )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ABSTRACT) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:52:4: a= ABSTRACT
					{
					a=(Token)match(input,ABSTRACT,FOLLOW_ABSTRACT_in_classDefinitionRule83); 
					}
					break;

			}

			match(input,CLASS,FOLLOW_CLASS_in_classDefinitionRule88); 
			c=(Token)match(input,ID,FOLLOW_ID_in_classDefinitionRule94); 
			 h.manageClassName (c); 
			pushFollow(FOLLOW_classCodeRule_in_classDefinitionRule104);
			classCodeRule();
			state._fsp--;

			 h.setClass(c); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classDefinitionRule"



	// $ANTLR start "relationsDefinitionRule"
	// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:58:1: relationsDefinitionRule : RELATIONS DP LBR ( relationCodeRule )* RBR ;
	public final void relationsDefinitionRule() throws RecognitionException {
		try {
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:59:2: ( RELATIONS DP LBR ( relationCodeRule )* RBR )
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:60:3: RELATIONS DP LBR ( relationCodeRule )* RBR
			{
			match(input,RELATIONS,FOLLOW_RELATIONS_in_relationsDefinitionRule121); 
			match(input,DP,FOLLOW_DP_in_relationsDefinitionRule125); 
			match(input,LBR,FOLLOW_LBR_in_relationsDefinitionRule129); 
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:63:3: ( relationCodeRule )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ID) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:63:3: relationCodeRule
					{
					pushFollow(FOLLOW_relationCodeRule_in_relationsDefinitionRule133);
					relationCodeRule();
					state._fsp--;

					}
					break;

				default :
					break loop4;
				}
			}

			match(input,RBR,FOLLOW_RBR_in_relationsDefinitionRule138); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "relationsDefinitionRule"



	// $ANTLR start "classCodeRule"
	// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:68:1: classCodeRule : LBR ( ( ATTRIBUTE DP attributeDeclarationRule ) | ( OPERATION DP operationDeclarationRule ) )* RBR ;
	public final void classCodeRule() throws RecognitionException {
		try {
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:69:2: ( LBR ( ( ATTRIBUTE DP attributeDeclarationRule ) | ( OPERATION DP operationDeclarationRule ) )* RBR )
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:70:3: LBR ( ( ATTRIBUTE DP attributeDeclarationRule ) | ( OPERATION DP operationDeclarationRule ) )* RBR
			{
			match(input,LBR,FOLLOW_LBR_in_classCodeRule154); 
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:71:3: ( ( ATTRIBUTE DP attributeDeclarationRule ) | ( OPERATION DP operationDeclarationRule ) )*
			loop5:
			while (true) {
				int alt5=3;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==ATTRIBUTE) ) {
					alt5=1;
				}
				else if ( (LA5_0==OPERATION) ) {
					alt5=2;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:72:4: ( ATTRIBUTE DP attributeDeclarationRule )
					{
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:72:4: ( ATTRIBUTE DP attributeDeclarationRule )
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:72:6: ATTRIBUTE DP attributeDeclarationRule
					{
					match(input,ATTRIBUTE,FOLLOW_ATTRIBUTE_in_classCodeRule166); 
					match(input,DP,FOLLOW_DP_in_classCodeRule168); 
					pushFollow(FOLLOW_attributeDeclarationRule_in_classCodeRule170);
					attributeDeclarationRule();
					state._fsp--;

					}

					}
					break;
				case 2 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:74:4: ( OPERATION DP operationDeclarationRule )
					{
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:74:4: ( OPERATION DP operationDeclarationRule )
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:74:5: OPERATION DP operationDeclarationRule
					{
					match(input,OPERATION,FOLLOW_OPERATION_in_classCodeRule183); 
					match(input,DP,FOLLOW_DP_in_classCodeRule185); 
					pushFollow(FOLLOW_operationDeclarationRule_in_classCodeRule187);
					operationDeclarationRule();
					state._fsp--;

					}

					}
					break;

				default :
					break loop5;
				}
			}

			match(input,RBR,FOLLOW_RBR_in_classCodeRule198); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "classCodeRule"



	// $ANTLR start "relationCodeRule"
	// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:79:1: relationCodeRule : nameRelation= ID nameClass1= ID mClass1= multiplicityRule relationTypeRule nameClass2= ID mClass2= multiplicityRule ( UNDREL infoClass= ID )? ;
	public final void relationCodeRule() throws RecognitionException {
		Token nameRelation=null;
		Token nameClass1=null;
		Token nameClass2=null;
		Token infoClass=null;

		try {
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:80:2: (nameRelation= ID nameClass1= ID mClass1= multiplicityRule relationTypeRule nameClass2= ID mClass2= multiplicityRule ( UNDREL infoClass= ID )? )
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:81:3: nameRelation= ID nameClass1= ID mClass1= multiplicityRule relationTypeRule nameClass2= ID mClass2= multiplicityRule ( UNDREL infoClass= ID )?
			{
			nameRelation=(Token)match(input,ID,FOLLOW_ID_in_relationCodeRule215); 
			nameClass1=(Token)match(input,ID,FOLLOW_ID_in_relationCodeRule224); 
			pushFollow(FOLLOW_multiplicityRule_in_relationCodeRule230);
			multiplicityRule();
			state._fsp--;

			pushFollow(FOLLOW_relationTypeRule_in_relationCodeRule234);
			relationTypeRule();
			state._fsp--;

			nameClass2=(Token)match(input,ID,FOLLOW_ID_in_relationCodeRule240); 
			pushFollow(FOLLOW_multiplicityRule_in_relationCodeRule246);
			multiplicityRule();
			state._fsp--;

			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:88:3: ( UNDREL infoClass= ID )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==UNDREL) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:89:4: UNDREL infoClass= ID
					{
					match(input,UNDREL,FOLLOW_UNDREL_in_relationCodeRule255); 
					infoClass=(Token)match(input,ID,FOLLOW_ID_in_relationCodeRule262); 
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "relationCodeRule"



	// $ANTLR start "attributeDeclarationRule"
	// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:96:1: attributeDeclarationRule : v= visibilityRule (aType= arrayTypeRule )? t= typeRule a= ID (d= ID )? ( multiplicityRule )? ( READONLY )? SC ;
	public final void attributeDeclarationRule() throws RecognitionException {
		Token a=null;
		Token d=null;
		String v =null;
		String aType =null;
		String t =null;

		try {
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:97:2: (v= visibilityRule (aType= arrayTypeRule )? t= typeRule a= ID (d= ID )? ( multiplicityRule )? ( READONLY )? SC )
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:98:3: v= visibilityRule (aType= arrayTypeRule )? t= typeRule a= ID (d= ID )? ( multiplicityRule )? ( READONLY )? SC
			{
			pushFollow(FOLLOW_visibilityRule_in_attributeDeclarationRule287);
			v=visibilityRule();
			state._fsp--;

			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:99:8: (aType= arrayTypeRule )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==LIST||LA7_0==MULTISET||LA7_0==ORDEREDSET||LA7_0==SET) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:99:8: aType= arrayTypeRule
					{
					pushFollow(FOLLOW_arrayTypeRule_in_attributeDeclarationRule300);
					aType=arrayTypeRule();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_typeRule_in_attributeDeclarationRule307);
			t=typeRule();
			state._fsp--;

			a=(Token)match(input,ID,FOLLOW_ID_in_attributeDeclarationRule313); 
			// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:102:4: (d= ID )?
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==ID) ) {
				alt8=1;
			}
			switch (alt8) {
				case 1 :
					// C:\\Users\\tiron\\Desktop\\Unibg\\2Magistrale\\ANNO I\\I Semestre\\Linguaggi formali e compilatori\\Progetto\\LFC2324_Project\\lcfuml\\src\\myCompilerPackage\\Uml.g:102:4: d= ID
					{
					d=(Token)match(input,ID,FOLLOW_ID_in_attributeDeclarationRule328); 
					}
					break;

			}
